# tree-sitter-conao3-javascript

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-conao3_javascript.h  tree-sitter-conao3_javascript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_conao3_javascript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterConao3JavascriptTests/: TreeSitterConao3JavascriptTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt
